are incompatible! To fix your old .ini and .toppas files use the new
INIUpdater tool (see its documentation and the TOPP documentation).

OpenMS 1.9 removed support for Mac OS X 10.5.

TOPP tools: 
-ADDED:
  - MapStatistics (statistics for low level quality control)
	- EICExtractor (quantify known RT,m/z locations in 1-many LC/MS maps and align them)
	- FeatureFinderRaw (feature finding on raw data)
-MODIFIED:
  - Split NoiseFilter into NoiseFilterGaussian and NoiseFilterSGolay
	- MascotAdapterOnline now supports Mascot 2.3 servers
	- Split PeakPicker into PeakPickerWavelet and PeakPickerHiRes
	- Split FeatureFinder into FeatureFinderMRM, FeatureFinderCentroided, FeatureFinderIsotopeWavelet
-REMOVED:
  - AndiMS/NetCDF is no longer supported on any platform
 
UTIL tools: 
-ADDED:
  - INIUpdater (update INI and TOPPAS files)
	 
OpenMS library improvements: 
- MODIFIED
	- The type parameter of MSSimulator was moved to MSSim:Labeling:type

TOPPView improvements:
-MODIFIED:
  - ConsensusFeatures can now be colored using MetaValues
  - Better grid line drawing/calculation, extracted AxisPainter class
  - IdentificationView:
    - added automatic labeling with peptide fragment sequence
    - theoretical spectrum is now hidden by default (labeling contains relevant information for most use cases)
    - automatic zoom to measured MS2 data range

TOPPAS improvements: 
	- TOPPAS allows for interactive download of preconfigured TOPPAS pipelines from OpenMS homepage
	- "Recycling" mode for nodes, useful for database input files (see docu for details)
	 
Changes to the Build System: 
	- TOPPAS now requires Qt's Webkit library
	- Use CMAKE_BUILD_TYPE instead of OPENMS_BUILD_TYPE
  - Removed AndiMS, NetCDF and dependencies	
	
Fixed Issues: 
	 
Detailed list of changes to specific OpenMS classes:
- MODIFIED: